# particle-life

./: CMakeLists.txt
include/: application.hpp  clock.hpp  color.hpp  coordinates.hpp  forceMatrix.hpp  gl3.hpp  graphics.hpp  particle.hpp  physics.hpp  positionSetter.hpp  renderer.hpp  shader.hpp  snapshot.hpp  threadController.hpp  typeSetter.hpp  vector2d.hpp
include/graphics/: attributeLocation.hpp  elementBuffer.hpp  shader.hpp  uniformLocation.hpp  vertexArray.hpp  vertexBuffer.hpp
include/setting/: appSettings.hpp  physicsSettings.hpp
resources/shaders/: default.frag  default.geom  default.vert
src/: application.cpp  coordinates.cpp  forceMatrix.cpp  graphics.cpp  main.cpp  particles.cpp  physics.cpp  positionSetter.cpp  renderer.cpp  shader.cpp  snapshot.cpp  typeSetter.cpp
src/graphics/: elementBuffer.cpp  shader.cpp  vertexArray.cpp  vertexBuffer.cpp
